--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "restaurangular": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "restaurangular"
+    }
+  },
+  "defaultProject": "restaurangular",
+  "cli": {
+    "analytics": "b3a6ed13-2714-4651-9cec-65d04b640c89"
+  }
 }
